--- a/nuxeo-distribution-dm/ftest/selenium/tests/testVocabulariesManagement.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/testVocabulariesManagement.html
@@ -111,6 +111,37 @@
 	<td>nature</td>
 	<td></td>
 </tr>
+<!-- select another vocabulary so that we can select continent after (in case continent is already selected) -->
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>selectDirectoryForm:directoriesList</td>
+	<td>label=country</td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>selectDirectoryForm:directoriesList</td>
+	<td>label=continent</td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
 <tr>
 	<td>verifyText</td>
 	<td>viewDirectoryEntries:nxl_vocabulary_1:nxw_vocabulary_id_1</td>
