NXP-6673 Add ids for easy testing

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/connect/connectStatus.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/connect/connectStatus.xhtml
@@ -181,7 +181,7 @@
         <tr>
           <td class="labelColumn"><h:outputText
             value="#{messages['label.nuxeo.connect.contractStatus']}" /></td>
-          <td><h:outputText
+          <td id="contractStatus"><h:outputText
             value="#{messages[connectStatus.status.contractStatusLabel]}" /></td>
         </tr>
         <tr>
