--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/edit_document.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/edit_document.xhtml
@@ -13,15 +13,10 @@
     <h3><h:outputText value="#{messages['title.edit']} #{currentType.id}" /></h3>
     <ui:include src="/incl/message_banner.xhtml" />
     <h:form>
-      <c:if test="#{!empty documentActions.changeableDocumentType.layout}">
-        <ui:include src="/incl/document_editor.xhtml" />
-      </c:if>
-      <c:if test="#{empty documentActions.changeableDocumentType.layout}">
-        <nxl:documentLayout mode="edit" value="#{changeableDocument}" />
-        <ui:include src="/incl/document_versioning.xhtml" />
-      </c:if>
+      <nxl:documentLayout mode="edit" value="#{currentDocument}" />
+      <ui:include src="/incl/document_versioning.xhtml" />
       <h:commandButton value="#{messages['command.save']}"
-        action="#{documentActions.updateDocument}" />
+        action="#{documentActions.updateCurrentDocument}" />
     </h:form>
     </div>
   </ui:define>
