--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tabs/document_edit.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tabs/document_edit.xhtml
@@ -7,13 +7,8 @@
 
 <h:form enctype="multipart/form-data" id="document_edit">
 
-  <c:if test="#{!empty documentActions.changeableDocumentType.layout}">
-    <ui:include src="/incl/document_editor.xhtml" />
-  </c:if>
-  <c:if test="#{empty documentActions.changeableDocumentType.layout}">
-    <nxl:documentLayout mode="edit" value="#{changeableDocument}" />
-    <ui:include src="/incl/document_versioning.xhtml" />
-  </c:if>
+  <nxl:documentLayout mode="edit" value="#{currentDocument}" />
+  <ui:include src="/incl/document_versioning.xhtml" />
 
   <table class="dataInput">
     <tbody>
@@ -23,7 +18,7 @@
           <h:outputText value="#{messages['label.comment']}" />
         </td>
         <td class="fieldColumn">
-          <h:inputTextarea value="#{changeableDocument.contextData['request/comment']}" />
+          <h:inputTextarea value="#{currentDocument.contextData['request/comment']}" />
         </td>
       </tr>
     </tbody>
@@ -32,7 +27,7 @@
   <p class="buttonsGadget">
     <h:commandButton value="#{messages['command.save']}"
       styleClass="button"
-      action="#{documentActions.updateDocument}" />
+      action="#{documentActions.updateCurrentDocument}" />
   </p>
 
 </h:form>
