NXP-6719: Make it possible for actions to be declared as immediate

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view.xhtml
@@ -132,6 +132,7 @@
                                     value="#{messages[sel_action.label]}"
                                     onclick="#{sel_action.confirm}"
                                     disabled="#{!sel_action.available}"
+                                    immediate="#{sel_action.immediate}"
                                     id="clipboardActionsButton" />
                                  </span>
                                 </nxu:dataList>
