--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view_result_layout_selector.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view_result_layout_selector.xhtml
@@ -97,7 +97,7 @@ Needed parameters:
         id="searchActionsTable">
         <nxh:commandLink action="#{action.getLink()}"
           value="#{messages[action.label]}"
-          immediate="true"
+          immediate="#{action.immediate}"
           id="contentViewExportActionsButton" />
       </nxu:dataList>
     </nxu:set>
