--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/export/export.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/export/export.xhtml
@@ -70,7 +70,8 @@
               <c:forEach var="action" items="#{exportCommandActions}">
                 <nxh:commandLink action="#{action.getLink()}"
                   title="#{messages[action.label]}"
-                  alt="#{messages[action.label]}">
+                  alt="#{messages[action.label]}"
+                  immediate="#{action.immediate}">
                   <h:graphicImage value="#{action.icon}" />
                   <h:outputText value=" #{messages[action.label]}" />
                 </nxh:commandLink>
