NXP-6719: Make it possible for actions to be declared as immediate

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/user_services_galaxy_admin.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/user_services_galaxy_admin.xhtml
@@ -25,7 +25,8 @@
           <h:outputText value=" | " rendered="#{row!=rowCount}"/>
 
           <nxh:commandLink action="#{action.getLink()}"
-            id="userServicesBottomActionCommandLink">
+            id="userServicesBottomActionCommandLink"
+            immediate="#{action.immediate}">
             <h:outputText value="#{messages[action.label]}" />
           </nxh:commandLink>
 
