NXP-6719: Make it possible for actions to be declared as immediate

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/document_actions.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/document_actions.xhtml
@@ -20,7 +20,8 @@
             value="#{actions}"
             id="documentActionSubviewUpperListTable">
             <nxh:commandLink action="#{action.getLink()}"
-              id="documentActionSubviewUpperListLink">
+              id="documentActionSubviewUpperListLink"
+              immediate="#{action.immediate}">
               <h:graphicImage value="#{action.icon}" />
               <h:outputText value="#{messages[action.label]}" />
             </nxh:commandLink>
