--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/section_clipboard.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/section_clipboard.xhtml
@@ -31,6 +31,7 @@ function confirmDeleteDocumentsForever() {
         value="#{messages[sel_action.label]}"
         onclick="#{sel_action.confirm}"
         disabled="#{!sel_action.available}"
+        immediate="#{sel_action.immediate}"
         />
      </span>
     </nxu:dataList>
