--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/document_actions_upperbuttons.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/document_actions_upperbuttons.xhtml
@@ -8,7 +8,8 @@
   <nxu:methodResult name="actions"
     value="#{webActions.getActionsList('DOCUMENT_UPPER_ACTION')}">
     <nxu:dataList layout="simple" var="action" value="#{actions}">
-      <nxh:commandLink action="#{action.getLink()}">
+      <nxh:commandLink action="#{action.getLink()}"
+        immediate="#{action.immediate}">
         <h:graphicImage value="#{action.icon}"
           title="#{messages[action.label]}"
           alt="#{messages[action.label]}"
@@ -19,7 +20,9 @@
   <nxu:methodResult name="actions"
     value="#{webActions.getActionsList('DOCUMENT_UPPER_ACTION_BLANK_TARGET')}">
     <nxu:dataList layout="simple" var="action" value="#{actions}">
-      <nxh:commandLink action="#{action.getLink()}" target="_blank">
+      <nxh:commandLink action="#{action.getLink()}"
+        immediate="#{action.immediate}"
+        target="_blank">
         <h:graphicImage value="#{action.icon}"
           title="#{messages[action.label]}"
           alt="#{messages[action.label]}"
