--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/create_domain.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/create_domain.xhtml
@@ -6,6 +6,8 @@
   xmlns:f="http://java.sun.com/jsf/core"
   xmlns:h="http://java.sun.com/jsf/html"
   xmlns:nxl="http://nuxeo.org/nxforms/layout"
+  xmlns:nxh="http://nuxeo.org/nxweb/html"
+  xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:c="http://java.sun.com/jstl/core">
 
   <ui:define name="page title">
@@ -21,10 +23,17 @@
     <h:form enctype="multipart/form-data">
       <nxl:documentLayout mode="create" value="#{changeableDocument}" />
       <p class="buttonsGadget">
-        <h:commandButton class="button" value="#{messages['command.create']}"
-          action="#{documentActions.saveDocument}" />
-        <h:commandButton class="button" value="#{messages['command.cancel']}"
-          action="#{navigationContext.goBack()}" immediate="true" />
+        <nxu:set var="actions"
+          value="#{webActions.getActionsList('CREATE_DOCUMENT_FORM')}"
+          cache="true">
+          <c:forEach var="action" items="#{actions}">
+            <nxh:commandButton action="#{action.getLink()}"
+              immediate="#{action.immediate}"
+              id="create_doc_#{action.id}"
+              value="#{messages[action.label]}"
+              styleClass="button" />
+          </c:forEach>
+        </nxu:set>
       </p>
     </h:form>
     </div>
