--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tabs/document_edit.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tabs/document_edit.xhtml
@@ -3,6 +3,8 @@
   xmlns:h="http://java.sun.com/jsf/html"
   xmlns:f="http://java.sun.com/jsf/core"
   xmlns:c="http://java.sun.com/jstl/core"
+  xmlns:nxh="http://nuxeo.org/nxweb/html"
+  xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:nxl="http://nuxeo.org/nxforms/layout">
 
 <h:form enctype="multipart/form-data" id="document_edit">
@@ -25,9 +27,17 @@
   </table>
 
   <p class="buttonsGadget">
-    <h:commandButton value="#{messages['command.save']}"
-      styleClass="button"
-      action="#{documentActions.updateCurrentDocument}" />
+    <nxu:set var="actions"
+      value="#{webActions.getActionsList('EDIT_DOCUMENT_FORM')}"
+      cache="true">
+      <c:forEach var="action" items="#{actions}">
+        <nxh:commandButton action="#{action.getLink()}"
+          immediate="#{action.immediate}"
+          id="edit_doc_#{action.id}"
+          value="#{messages[action.label]}"
+          styleClass="button" />
+      </c:forEach>
+    </nxu:set>
   </p>
 
 </h:form>
