NXP-6719: Make it possible for actions to be declared as immediate

--- a/nuxeo-user-center/src/main/resources/web/nuxeo.war/incl/user_services_galaxy_user_center.xhtml
+++ b/nuxeo-user-center/src/main/resources/web/nuxeo.war/incl/user_services_galaxy_user_center.xhtml
@@ -25,6 +25,7 @@
           <h:outputText value=" | " rendered="#{row!=rowCount}"/>
 
           <nxh:commandLink action="#{action.getLink()}"
+            immediate="#{action.immediate}"
             id="userServicesBottomActionCommandLink">
             <h:outputText value="#{messages[action.label]}" />
           </nxh:commandLink>
