NXP-6226: move test to the main suite because it's not specific to DM

--- a/nuxeo-distribution-dm/ftest/selenium/tests/suite-dm.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/suite-dm.html
@@ -10,9 +10,8 @@
     <tr>
       <td><b>Nuxeo DM Test Suite</b></td>
     </tr>
-    <tr>
-      <td><a href="./cancelNote.html">cancelNote</a></td>
-    </tr>
+    <!-- add back the note because next tests need it and
+      it was removed in suite2, see NXP-5263 -->
     <tr>
       <td><a href="./createNote.html">createNote</a></td>
     </tr>
