--- a/nuxeo-distribution-dm/ftest/selenium/tests/suite1.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/suite1.html
@@ -59,6 +59,9 @@
       <td><a href="./createNote.html">createNote</a></td>
     </tr>
     <tr>
+      <td><a href="./cancelNote.html">cancelNote</a></td>
+    </tr>
+    <tr>
       <td><a href="./consultHistory.html">consultHistory</a></td>
     </tr>
     <tr>
