--- a/nuxeo-distribution-dm/ftest/selenium/tests/createForum.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/createForum.html
@@ -1,6 +1,9 @@
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head profile="http://selenium-ide.openqa.org/profiles/test-case">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="selenium.base" href="" />
 <title>createForum</title>
 </head>
 <body>
@@ -14,9 +17,9 @@
 	<td></td>
 </tr>
 <tr>
-        <td>open</td>
-        <td>restAPI/systemLog?token=dolog&amp;level=WARN&amp;message=----- Selenium createForum</td>
-        <td></td>
+	<td>open</td>
+	<td>restAPI/systemLog?token=dolog&amp;level=WARN&amp;message=----- Selenium createForum</td>
+	<td></td>
 </tr>
 <!--Creation of the forum-->
 <tr>
@@ -61,12 +64,12 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>//table[@class="dataInput"]/tbody/tr//td[2]/input</td>
+	<td>document_create:nxl_heading:nxw_title</td>
 	<td>testForum1</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@value="Create"]</td>
+	<td>//input[@value=&quot;Create&quot;]</td>
 	<td></td>
 </tr>
 <tr>
